--- a/Drip/Pages/Operation.razor
+++ b/Drip/Pages/Operation.razor
@@ -122,7 +122,7 @@ else
                                                 <span class="content-type">@content.Key</span>
                                                 @if (content.Value.Schema != null)
                                                 {
-                                                    <SchemaDisplay Schema="content.Value.Schema" Document="OpenApiDocument" />
+                                                    <SchemaDisplay Schema="content.Value.Schema" />
                                                 }
                                             </div>
                                         </div>
