--- a/Drip/Pages/Operation.razor
+++ b/Drip/Pages/Operation.razor
@@ -75,15 +75,26 @@ else
                     <p class="body-description">@OpenApiOperation.RequestBody.Description</p>
                 }
                 <div class="content-types">
-                    @foreach (var (contentType, content) in OpenApiOperation.RequestBody.Content)
+                    @{
+                        var grouped = OpenApiOperation.RequestBody.Content
+                            .Where(c => c.Value.Schema != null)
+                            .GroupBy(c => c.Value.Schema.Reference?.Id ?? c.Value.Schema.GetHashCode().ToString())
+                            .Select(g => new {
+                                ContentTypes = g.Select(x => x.Key).ToList(),
+                                Schema = g.First().Value.Schema
+                            });
+                    }
+                    @foreach (var group in grouped)
                     {
                         <div class="content-type-item">
                             <div class="content-type-header">
-                                <span class="content-type">@contentType</span>
-                                @if (content.Schema != null)
-                                {
-                                    <SchemaDisplay Schema="content.Schema" />
-                                }
+                                <div class="content-type-tags" style="margin-bottom: 0.75rem;">
+                                    @foreach (var ct in group.ContentTypes)
+                                    {
+                                        <span class="content-type-tag">@ct</span>
+                                    }
+                                </div>
+                                <SchemaDisplay Schema="group.Schema" />
                             </div>
                         </div>
                     }
@@ -115,15 +126,24 @@ else
                             @if (response.Value.Content?.Any() == true)
                             {
                                 <div class="response-content">
-                                    @foreach (var content in response.Value.Content)
+                                    @{
+                                        var grouped = response.Value.Content
+                                            .Where(c => c.Value.Schema != null)
+                                            .GroupBy(c => c.Value.Schema.Reference?.Id ?? c.Value.Schema.GetHashCode().ToString())
+                                            .Select(g => new {
+                                                ContentTypes = g.Select(x => x.Key).ToList(),
+                                                Schema = g.First().Value.Schema
+                                            });
+                                    }
+                                    @foreach (var group in grouped)
                                     {
                                         <div class="content-type-item">
                                             <div class="content-type-header">
-                                                <span class="content-type">@content.Key</span>
-                                                @if (content.Value.Schema != null)
+                                                @foreach (var ct in group.ContentTypes)
                                                 {
-                                                    <SchemaDisplay Schema="content.Value.Schema" />
+                                                    <span class="content-type-tag">@ct</span>
                                                 }
+                                                <SchemaDisplay Schema="group.Schema" />
                                             </div>
                                         </div>
                                     }
